feat(docs): update subscription.go
