# docs/swagger.json
@@ -56,6 +56,17 @@
                     "subscription"
                 ],
                 "summary": "Update subscription",
+                "parameters": [
+                    {
+                        "description": "Subscription request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SubscriptionReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -78,6 +89,17 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SubscriptionReq": {
+            "type": "object",
+            "properties": {
+                "active_until": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 }
             }
